tests/ui/fail/only_struct.stderr
error: Unsupported shape `enum`
 --> tests/ui/fail/only_struct.rs:1:10
  |
1 | #[derive(sqlo::Sqlo)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `sqlo::Sqlo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `newtype`
 --> tests/ui/fail/only_struct.rs:4:10
  |
4 | #[derive(sqlo::Sqlo)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `sqlo::Sqlo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `newtype`
 --> tests/ui/fail/only_struct.rs:7:10
  |
7 | #[derive(sqlo::Sqlo)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `sqlo::Sqlo` (in Nightly builds, run with -Z macro-backtrace for more info)
